Name:                indexed-extras
Version:             0.1
Synopsis:            Indexed functors, monads and comonads that require extensions to Haskell98
Description:         Indexed functors, monads and comonads that require extensiosn to Haskell98
License:             BSD3
License-file:        LICENSE
Author:              Edward A. Kmett
Maintainer:          Reiner Pope <reiner.pope@gmail.com>
Copyright:           
    Copyright (C) 2012 Reiner Pope,
    Copyright (C) 2008 Edward A. Kmett, 
    Copyright (C) 2004--2008 Dave Menendez, 
    Copyright (C) 2007 Iavor Diatchki
Category:            Control
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:
     Control.Monad.Indexed.Cont,
     Control.Monad.Indexed.State
  Build-depends:
     base < 5,
     indexed < 0.2,
     mtl < 2.1,
     pointed < 2.1,
     bifunctors < 0.2
  ghc-options:
     -Wall
     -Werror
  Extensions:
     UndecidableInstances,
     GeneralizedNewtypeDeriving,
     FlexibleInstances,
     MultiParamTypeClasses,
     Rank2Types
